# sevenT

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.gpu.yaml  compose.yaml
.github/workflows/: release-build.yml
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  translators.js
deploy/: sevenT-compose.service
doc/: chrome-extension-install.md
logs/: requests.jsonl  test-requests.jsonl
scripts/: package-backend-release.sh  package-extension-crx.sh  package-extension.sh
src/: config.rs  http.rs  main.rs  model.rs  request_log.rs
