[package]
name = "nas-nllb-service"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = ["ct2rs/cuda", "ct2rs/cuda-dynamic-loading", "ct2rs/cuda-small-binary"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
ct2rs = { version = "0.9.18", default-features = false, features = ["all-tokenizers", "ruy"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
